--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+target/
+!**/src/main/**/target/
+!**/src/test/**/target/
+
 
 ### Eclipse ###
 .apt_generated
